# OpenGL-learning

./: .gitignore  .gitmodules  CMakeLists.txt  OpenGL.cpp  README.md  clean.sh  configure.sh  run.sh
res/: shaders
